--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -31,7 +31,7 @@
             android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:inputType = "text"
-            android:text = "Type Description"
+            android:hint = "Type Description"
             android:textColor="#777"
             android:gravity = "top"
             android:layout_marginStart="20dp"
@@ -44,7 +44,7 @@
             android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:inputType = "text"
-            android:text = "Location"
+            android:hint = "Location"
             android:textColor="#777"
             android:gravity = "top"
             android:layout_marginStart="20dp"
@@ -57,7 +57,7 @@
             android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:inputType = "text"
-            android:text = "Event Name"
+            android:hint = "Event Name"
             android:textColor="#777"
             android:gravity = "top"
             android:layout_marginStart="20dp"
@@ -70,7 +70,7 @@
             android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:inputType = "text"
-            android:text = "Organization"
+            android:hint = "Organization"
             android:textColor="#777"
             android:gravity = "top"
             android:layout_marginStart="20dp"
@@ -85,6 +85,18 @@
             android:orientation="horizontal"
             android:gravity="center|bottom"
             android:layout_marginTop="550dp">
+
+            <Button
+                android:layout_width = "match_parent"
+                android:layout_height = "40dp"
+                android:hint="Select Date"
+                android:id="@+id/tvDate"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_centerHorizontal="true"
+                android:background="@android:color/transparent"
+                />
 
         </LinearLayout>
 
