--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -82,20 +82,28 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:gravity="center|bottom"
             android:layout_marginTop="550dp">
 
-            <Button
-                android:layout_width = "match_parent"
-                android:layout_height = "40dp"
-                android:hint="Select Date"
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text = "Select Date"
                 android:id="@+id/tvDate"
+                />
+
+            <Button
+                android:layout_width = "wrap_content"
+                android:layout_height = "40dp"
+                android:hint="Date"
+                android:id="@+id/button_date"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
+                android:onClick = "openDatePicker"
                 />
 
         </LinearLayout>
