--- a/app/src/main/res/layout/activity_club_profile.xml
+++ b/app/src/main/res/layout/activity_club_profile.xml
@@ -121,7 +121,8 @@
         android:minHeight="20dp"
         android:text="Location:"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -138,7 +139,8 @@
         android:minHeight="20dp"
         android:text="Email:"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -155,7 +157,8 @@
         android:minHeight="20dp"
         android:text="Phone:"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -172,7 +175,8 @@
         android:minHeight="20dp"
         android:text="Address:"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -189,7 +193,8 @@
         android:minHeight="20dp"
         android:text="Description:"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -210,6 +215,7 @@
         android:text="Club Name"
         android:textSize="20sp"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.908"
@@ -218,11 +224,13 @@
         app:layout_constraintVertical_bias="0.149" />
 
     <!--Textview for Location Info-->
+
+    <!--TextView for Email Info-->
     <TextView
         android:id="@+id/location_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="12"
+        android:ems="11"
         android:minHeight="20dp"
         android:text="....."
         android:textColor="@color/black"
@@ -232,14 +240,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.279" />
+        app:layout_constraintVertical_bias="0.284" />
 
-    <!--TextView for Email Info-->
+    <!--TextView for Phone Number Info-->
     <TextView
         android:id="@+id/email_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="12"
+        android:ems="11"
         android:minHeight="20dp"
         android:text="....."
         android:textColor="@color/black"
@@ -249,14 +257,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.343" />
+        app:layout_constraintVertical_bias="0.348" />
 
-    <!--TextView for Phone Number Info-->
+    <!--TextView for Address Info-->
     <TextView
         android:id="@+id/pnumber_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="12"
+        android:ems="11"
         android:minHeight="20dp"
         android:text="....."
         android:textColor="@color/black"
@@ -266,14 +274,14 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404" />
+        app:layout_constraintVertical_bias="0.407" />
 
-    <!--TextView for Address Info-->
+    <!--TextView for Description Info-->
     <TextView
         android:id="@+id/address_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="12"
+        android:ems="11"
         android:minHeight="20dp"
         android:text="....."
         android:textColor="@color/black"
@@ -283,9 +291,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.468" />
+        app:layout_constraintVertical_bias="0.471" />
 
-    <!--TextView for Description Info-->
     <TextView
         android:id="@+id/description_info"
         android:layout_width="wrap_content"
