--- a/app/src/main/res/layout/resource_search_events.xml
+++ b/app/src/main/res/layout/resource_search_events.xml
@@ -7,6 +7,9 @@
     android:layout_marginBottom="10dp">
 
     <!--Image for club-->
+
+    <!--Textview to hold Club name-->
+
     <ImageView
         android:id="@+id/club_picture"
         android:layout_width="101dp"
@@ -16,22 +19,25 @@
         android:contentDescription="@string/banner_for_event"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.122"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="ImageContrastCheck"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <!--Textview to hold Club name-->
     <TextView
         android:id="@+id/name_of_club"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="36dp"
+        android:ems="10"
         android:text="Club Name:"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/club_picture"
+        app:layout_constraintEnd_toStartOf="@+id/club_picture"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
