--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -6,116 +6,166 @@
     android:layout_height="match_parent"
     tools:context=".PostActivity">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        android:gravity="center|top">
-
-        <ImageView
-            android:id="@+id/my_image"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_below="@id/button_attach"
-            tools:ignore="NotSibling"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            >
-        </ImageView>
-
-        <EditText
-            android:id="@+id/post_des"
-            android:layout_width = "match_parent"
-            android:layout_height="wrap_content"
-            android:inputType = "text"
-            android:text = "Type Description"
-            android:textColor="#777"
-            android:gravity = "top"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="340dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            />
-        <EditText
-            android:id="@+id/post_location"
-            android:layout_width = "match_parent"
-            android:layout_height="wrap_content"
-            android:inputType = "text"
-            android:text = "Location"
-            android:textColor="#777"
-            android:gravity = "top"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="390dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            />
-        <EditText
-            android:id="@+id/post_name"
-            android:layout_width = "match_parent"
-            android:layout_height="wrap_content"
-            android:inputType = "text"
-            android:text = "Event Name"
-            android:textColor="#777"
-            android:gravity = "top"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="440dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            />
-        <EditText
-            android:id="@+id/post_org"
-            android:layout_width = "match_parent"
-            android:layout_height="wrap_content"
-            android:inputType = "text"
-            android:text = "Organization"
-            android:textColor="#777"
-            android:gravity = "top"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="490dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="70dp"
-            />
+        android:layout_marginBottom="60dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center|bottom"
-            android:layout_marginTop="550dp">
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="1dp"
+            android:gravity="center|top">
+
+            <ImageView
+                android:id="@+id/my_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                tools:ignore="NotSibling"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginVertical="10dp"
+                >
+            </ImageView>
+
+            <EditText
+                android:id="@+id/post_name"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:inputType = "text"
+                android:hint = "Event Name"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                />
+
+            <EditText
+                android:id="@+id/post_org"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:inputType = "text"
+                android:hint = "Organization"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                />
+
+            <EditText
+                android:id="@+id/post_location"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:inputType = "text"
+                android:hint = "Location"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                />
+
+            <EditText
+                android:id="@+id/post_date"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:hint = "Date"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                android:editable="false"
+                android:focusable="false"
+                android:inputType="none"
+                />
+
+            <EditText
+                android:id="@+id/post_time"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:hint = "Time"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                android:editable="false"
+                android:focusable="false"
+                android:inputType="none"
+                />
+
+            <EditText
+                android:id="@+id/post_des"
+                android:layout_width = "match_parent"
+                android:layout_height="wrap_content"
+                android:inputType = "text"
+                android:hint = "Description"
+                android:textColor="#777"
+                android:gravity = "top"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center|bottom"
+                android:layout_marginVertical="3dp"
+                android:layout_marginHorizontal="20dp"
+                >
+
+                <Button
+                    android:id="@+id/button_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="getDate"
+                    android:text="Pick Date" />
+
+                <Button
+                    android:id="@+id/button_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="getTime"
+                    android:text="Pick Time" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+    </ScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center|bottom">
 
-            <Button
-                android:id="@+id/button_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Back" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center|bottom"
+        android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button_attach"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Attach" />
+        <Button
+            android:id="@+id/button_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Back" />
 
-            <Button
-                android:id="@+id/button_post"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Post" />
+        <Button
+            android:id="@+id/button_attach"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Attach" />
 
-        </LinearLayout>
-    </RelativeLayout>
+        <Button
+            android:id="@+id/button_post"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Post" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
